force-app/main/default/objects/WorkOrderLineItem/fields/Apartment_number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_number__c</fullName>
    <description>Line part of the Apartment address.</description>
    <formula>Configuration_Product__r.Configuration__r.Plan_Apartment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apartment number OLD</label>
    <type>Text</type>
</CustomField>