force-app/main/default/objects/WorkOrderLineItem/fields/BlindsSurface__c.field-meta.xml
<CustomField>
    <fullName>BlindsSurface__c</fullName>
    <label>Blinds Surface</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>