force-app/main/default/objects/WorkOrderLineItem/fields/Combination_name__c.field-meta.xml
<CustomField>
    <fullName>Combination_name__c</fullName>
    <description>Used to provide more details to WO/WOLI based configuration product selection in Reclamation/Warranty Case creation from Account.</description>
    <formula>Street &amp; &quot;: &quot; &amp; Configuration_Product__r.Product__r.Name &amp; &quot; (Plan: &quot; &amp;  Configuration_Product__r.Configuration__r.Plan_Name__c &amp; &quot;, RVN: &quot; &amp; RVN_Number__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combination name</label>
    <type>Text</type>
</CustomField>