force-app/main/default/objects/WorkOrderLineItem/fields/Combined_info__c.field-meta.xml
<CustomField>
    <fullName>Combined_info__c</fullName>
    <description>Used in WOLI list to provide more details in the Salestori integration work to the Installer.</description>
    <formula>IF
(
ISBLANK( Apartment_number__c ),
Configuration_Product__r.Product__r.Name,
(Configuration_Product__r.Product__r.Name &amp; &quot; F:&quot; &amp; Floor__c &amp; &quot; A:&quot; &amp; Apartment_number__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined info OLD</label>
    <type>Text</type>
</CustomField>