force-app/main/default/objects/WorkOrderLineItem/fields/Config_Product_name__c.field-meta.xml
<CustomField>
    <fullName>Config_Product_name__c</fullName>
    <description>Allow to show the Configuration Product name for the Installer on the WO WOLIs list.</description>
    <formula>Configuration_Product__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Config Product name</label>
    <type>Text</type>
</CustomField>