force-app/main/default/objects/WorkOrderLineItem/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description OLD</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>