force-app/main/default/objects/WorkOrderLineItem/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>Floor part of the Apartment address.</description>
    <formula>Configuration_Product__r.Configuration__r.Plan_Floor__c</formula>
    <label>Floor</label>
    <type>Text</type>
</CustomField>