force-app/main/default/objects/WorkOrderLineItem/fields/Install_Expense__c.field-meta.xml
<CustomField>
    <fullName>Install_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Installation expense specific to the region where the work is done.</description>
    <label>Install Expense</label>
    <referenceTo>Install_Expense__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>