force-app/main/default/objects/WorkOrderLineItem/fields/Installable_Product__c.field-meta.xml
<CustomField>
    <fullName>Installable_Product__c</fullName>
    <description>Defines if this work will require an Asset to be created.</description>
    <formula>IF(
   ISPICKVAL(WorkType.Type__c, &quot;New Product installation&quot;), 
   TRUE, 
   FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installable Product OLD</label>
    <type>Checkbox</type>
</CustomField>