force-app/main/default/objects/WorkOrderLineItem/fields/InstallationDocumentLink__c.field-meta.xml
<CustomField>
    <fullName>InstallationDocumentLink__c</fullName>
    <description>Link to the Installation Document</description>
    <label>Installation Document Link</label>
    <type>Url</type>
</CustomField>