force-app/main/default/objects/WorkOrderLineItem/fields/Installed_By2__c.field-meta.xml
<CustomField>
    <fullName>Installed_By2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the installer&apos;s reference after the WOLI has been set to Completed status.</description>
    <label>Installed By2</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>