force-app/main/default/objects/WorkOrderLineItem/fields/Installed_By__c.field-meta.xml
<CustomField>
    <fullName>Installed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the installer&apos;s (user) reference after the WOLi has been set to Completed status.</description>
    <label>Installed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>