force-app/main/default/objects/WorkOrderLineItem/fields/Is_installable__c.field-meta.xml
<CustomField>
    <fullName>Is_installable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if this work will require an Asset to be created. Set by automation (flow).</description>
    <label>Is installable OLD</label>
    <type>Checkbox</type>
</CustomField>