force-app/main/default/objects/WorkOrderLineItem/fields/Is_Reclamation__c.field-meta.xml
<CustomField>
    <fullName>Is_Reclamation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is set when the WOLI is of type Reclamation.</description>
    <label>Is Reclamation</label>
    <type>Checkbox</type>
</CustomField>