force-app/main/default/objects/WorkOrderLineItem/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>Line part of the Apartment address.</description>
    <formula>Configuration_Product__r.Configuration__r.Plan_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line OLD</label>
    <type>Text</type>
</CustomField>