force-app/main/default/objects/WorkOrderLineItem/fields/NextStatus__c.field-meta.xml
<CustomField>
    <fullName>NextStatus__c</fullName>
    <description>Dependent Picklist to indicate the next Allowed Status</description>
    <label>NextStatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Statuses</valueSetName>
    </valueSet>
</CustomField>