force-app/main/default/objects/WorkOrderLineItem/fields/NumberOfGlassPanels__c.field-meta.xml
<CustomField>
    <fullName>NumberOfGlassPanels__c</fullName>
    <label>Number of Glass Panels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>