force-app/main/default/objects/WorkOrderLineItem/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <description>The Identifier of the Offer in Salestori</description>
    <inlineHelpText>The Identifier of the Offer in Salestori</inlineHelpText>
    <label>Offer Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>