force-app/main/default/objects/WorkOrderLineItem/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Line Item that refers to the work needed i.e. the WOLI.</description>
    <label>Opportunity Product OLD</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>