force-app/main/default/objects/WorkOrderLineItem/fields/Original_WOLI_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_WOLI_Id__c</fullName>
    <description>In Salestori integration, when splitting the work to different WOs and WOLIs, this id is used to reference the original WOLI under the original WO and help to find the related Content Document Links.</description>
    <label>Original WOLI Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>