force-app/main/default/objects/WorkOrderLineItem/fields/Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_name__c</fullName>
    <description>Shows the related Opportunity Product name on the related list, if needed.</description>
    <formula>Opportunity_Product__r.PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product name</label>
    <type>Text</type>
</CustomField>