force-app/main/default/objects/WorkOrderLineItem/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>