force-app/main/default/objects/WorkOrderLineItem/fields/ProductWeight__c.field-meta.xml
<CustomField>
    <fullName>ProductWeight__c</fullName>
    <label>Product Weight</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>