force-app/main/default/objects/WorkOrderLineItem/fields/RemoteFile__c.field-meta.xml
<CustomField>
    <fullName>RemoteFile__c</fullName>
    <description>Reference to the Remote File Name</description>
    <label>Remote File</label>
    <length>250</length>
    <type>Text</type>
</CustomField>