force-app/main/default/objects/WorkOrderLineItem/fields/RemoteFolder__c.field-meta.xml
<CustomField>
    <fullName>RemoteFolder__c</fullName>
    <description>Reference to the Remote Folder where Attachments are stored</description>
    <label>Remote Folder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>