force-app/main/default/objects/WorkOrderLineItem/fields/RVN__c.field-meta.xml
<CustomField>
    <fullName>RVN__c</fullName>
    <label>RVN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>