force-app/main/default/objects/WorkOrderLineItem/fields/RVN_Number__c.field-meta.xml
<CustomField>
    <fullName>RVN_Number__c</fullName>
    <description>Unique number (Sales Order Number + Visual given number) coming from Opportunity Product.</description>
    <label>RVN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>