force-app/main/default/objects/WorkOrderLineItem/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <description>Shows the Unique Id for the Record</description>
    <inlineHelpText>Shows the Unique Id for the Record</inlineHelpText>
    <label>UniqueId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>