force-app/main/default/objects/WorkOrderLineItem/fields/Work_duration_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Work_duration_in_minutes__c</fullName>
    <description>Calculated duration in minutes. Is the difference between End and Startdate.</description>
    <formula>IF
(
  NOT ISBLANK(EndDate) &amp;&amp; NOT ISBLANK(StartDate),
  (EndDate -  StartDate)*24*60,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work duration in minutes OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>